# service-systemd

./: .code-workspace  .gitignore  .npmignore  .travis-disabled.yml  .travis.yml  CMakeLists.txt  README.md  binding.gyp  package-lock.json  package.json
.github/workflows/: ci.yml  emu.yml  ubuntu-build-check.sh  ubuntu-install.sh  update_readme_api.yml
public/: manifest.json
src/: service.mjs  systemd.cpp
tests/: credentials-ava.mjs  exapmle.mjs  journal-ava.mjs  journal-test.mjs  notify-test-cli.mjs  rollup.config.js  service-ava.mjs  service-test.mjs  systemd-journal-test.mjs  systemd-notify-ava.mjs  systemd-notify-test.mjs  util.mjs
tests/fixtures/: notify-test.service
tests/helpers/: fake_systemd_session.sh  notify-test-cli.mjs  rollup.config.js  rollup.config.mjs  util.mjs
